# api-extraction-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-lambda.yml
authentication/: amadeus-api-auth.py  github-api-auth.py  nasa-api-auth.py  session-performance-test.py
backup/: amadeus_auth_demo.py  concurrent_stress_test.py  github_resilient.py  jikan_crash_demo.py  jikan_solution.py  rate_limit_test.py  test-tmtd-extraction.py
incremental-extraction/: github-pandas-issue-incremental-extract.py
lambda-deployment/: github-issue-extract.py  github_issue_extractor.py  lambda_handler.py
lambda-deployment/terraform/: iam.tf  lambda.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
lambda-deployment/tests/: __init__.py  test_github_issue_extractor.py  test_lambda_handler.py
multi-threading/: github-issues-multithreaded.py  issue_state.json
multi-threading/data/: issues_2026-02-10_batch_001.csv  issues_2026-02-10_batch_002.csv  issues_2026-02-10_batch_003.csv  issues_2026-02-10_batch_004.csv  issues_2026-02-10_batch_005.csv  issues_2026-02-10_batch_006.csv  issues_2026-02-10_batch_007.csv  issues_2026-02-10_batch_008.csv  issues_2026-02-10_batch_009.csv  issues_2026-02-10_batch_010.csv  issues_2026-02-10_batch_011.csv  issues_2026-02-10_batch_012.csv  issues_2026-02-10_batch_013.csv  issues_2026-02-10_batch_014.csv  issues_2026-02-10_batch_015.csv  (+2 more)
pagination/: github-pandas-pr-extract.py  reddit-cursor-based-pagination.py  tmdb-popular-movies-extract.py
rate-limit/: github-issue-rate-limit-handling.py  github_crash.py
